2008-08-08  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Ide.Gui.Pads.ProjectPad/SolutionFolderNodeBuilder.cs,
	  MonoDevelop.Ide.Gui.Pads.ProjectPad/CombineNodeBuilder.cs,
	  MonoDevelop.Ide.mdp, Makefile.am: Renamed file. Fixed
	  GetParentObject: GetParentObject should return the solution for
	  root folders.

2008-08-08  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Ide.Gui.Dialogs/OverridesImplementsDialog.cs: Fix issue
	  with enumerator returned by GetCheckedSiblings. The enumerator
	  can't be reused after calling MoveNext.

2008-08-07  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Ide.Commands/DebugCommands.cs, MonoDevelop.Ide.addin.xml:
	  Added new breakpoint commands.
	* MonoDevelop.Ide.Debugging/DebuggingService.cs,
	  MonoDevelop.Ide.Gui.Dialogs/BreakpointPropertiesDialog.cs,
	  MonoDevelop.Ide.mdp,
	  gtk-gui/MonoDevelop.Ide.Gui.Dialogs.BreakpointPropertiesDialog.cs,
	  gtk-gui/gui.stetic, Makefile.am: Moved breakpoint properties dialog
	  from the debugger add-in. More stuff likely to come here.

2008-08-06  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Ide.addin.xml: Added some missing icons to commands.

2008-08-05  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Ide.Debugging/DebuggingService.cs: Fix some warnings. Add
	  ActiveThread property.

2008-08-05  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Ide.Gui.OptionPanels/KeyBindingsPanel.cs,
	  MonoDevelop.Ide.Gui.Dialogs/CombineEntryFeatureSelector.cs,
	  MonoDevelop.Ide.StandardHeader/StandardHeaderPanel.cs,
	  MonoDevelop.Ide.mdp, gtk-gui/objects.xml: Updated.
	* MonoDevelop.Ide.Gui.Dialogs/GoToDialog.cs: Don't crash MD if there is
	  an exception in the go to dialog.
	* MonoDevelop.Ide.Gui/Document.cs: Request file edit permission when
	  saving a document.

2008-07-31  Michael Hutchinson <mhutchinson@novell.com> 

	* MonoDevelop.Ide.Gui/SdiWorkspaceWindow.cs: Escape < so it doesn't get